# asispectralinversion

./: README.md  minimalexample.ipynb  pyproject.toml
src/: setup.py
src/asispectralinversion/: inversion.py  preprocessing.py  pullfiles.py  utils.py
test_data_20230314/: bluedata.mat  greendata.mat  reddata.mat
test_data_20230319/: bluedata.mat  greendata.mat  reddata.mat
test_data_20230319/airglow/: in.invert.23078_30212
